# aqi-hub

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: codespeed.yml  pages.yml  pypi-publish.yml  release.yml  test.yml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/breaking_points/: index.html
0.3.0/usage/: index.html
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/breaking_points/: index.html
0.3.1/search/: search_index.json
0.3.1/usage/: index.html
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/breaking_points/: index.html
0.3.2/usage/: index.html
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/breaking_points/: index.html
0.3.3/search/: search_index.json
0.3.3/usage/: index.html
develop/: 404.html  index.html  sitemap.xml
develop/breaking_points/: index.html
develop/usage/: index.html
docs/: breaking_points.md  index.md  usage.md
examples/: cn_example.py  cn_example.rs  us_example.py  us_example.rs
latest/: 404.html  index.html  sitemap.xml
latest/breaking_points/: index.html
latest/usage/: index.html
src/: __init__.py  cn.rs  lib.rs  python.rs  usa.rs
src/aqi_hub/: __init__.py
src/aqi_hub/aqi_cn/: __init__.py  aqi.py  common.py
src/aqi_hub/aqi_usa/: __init__.py  aqi.py  common.py
tests/: test_aqi.py
tests/aqi_cn/: test_aqi_cn.py  test_cal_aqi_cn.py  test_get_aqi_level.py
tests/aqi_usa/: test_aqi.py  test_aqi_class.py  test_aqi_color.py  test_aqi_level.py  test_aqi_usa.py  test_iaqi.py  test_primary_pollutant.py
