[project]
name = "aqi-hub"
version = "0.1.0"
description = "Air quality index hub"
authors = [{ name = "Water Ghost", email = "maxlee1991zyz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["aqi", "air quality"]

dependencies = []

[project.urls]
Homepage = "https://github.com/caiyunapp/aqi-hub"
Issues = "https://github.com/caiyunapp/aqi-hub/issues"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/aqi_hub"]

[tool.hatch.build.targets.sdist]
include = [
    "src/aqi_hub/**/*.py",
    "LICENSE",
    "README.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
