[project]
name = "aqi-hub"
version = "1.0.0"
description = "Air quality index hub (Rust core, Python bindings)"
maintainers = [
    { name = "caiyunapp", email = "oss@caiyunapp.com" },
    { name = "Water Ghost", email = "maxlee1991zyz@gmail.com" },
    { name = "ringsaturn", email = "ringsaturn.me@gmail.com" },
]
authors = [
    { name = "caiyunapp", email = "oss@caiyunapp.com" },
    { name = "Water Ghost", email = "maxlee1991zyz@gmail.com" },
    { name = "ringsaturn", email = "ringsaturn.me@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["aqi", "air quality"]

dependencies = []

[project.urls]
Homepage = "https://github.com/caiyunapp/aqi-hub"
Issues = "https://github.com/caiyunapp/aqi-hub/issues"

[dependency-groups]
dev = [
    "maturin>=1.6,<2",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.3",
    "mike>=2.0",
    "pytest",
    "ruff",
]

[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]
python-source = "src"
module-name = "aqi_hub._native"

[tool.maturin.sdist]
include = ["src/aqi_hub/**/*.py", "LICENSE", "README.md"]

[tool.ruff.lint.per-file-ignores]
"src/aqi_hub/aqi_cn/aqi.py" = ["I001"]
"src/aqi_hub/aqi_usa/aqi.py" = ["I001"]
